Bug #20153: Fetching all data from a statement handle does not mark it as finished

When all data from a statement handle was fetched, the handle was not
  being flagged as finished (as the DBI documentation says it should be).
  This fixes that, and adds a regression test for this behavior.


git-svn-id: https://svn.perl.org/modules/DBD-mysql/branches/Dev-3_0@6855 50811bd7-b8ce-0310-adc1-d9db26280581